Add divs to HTML page and style them in css.

--- a/index.html
+++ b/index.html
@@ -5,18 +5,42 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
+    <div id ="welcome">
     <h1>Welcome to Happy Trails website</h1>
     <img src="images/resort1.jpg" alt="Happy trails resort">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur rem, suscipit excepturi eveniet quod error quisquam cupiditate, veniam esse et quae sint commodi nesciunt omnis dolorum obcaecati distinctio eos aspernatur!</p>
     <h1>Travel Destinations</h1>
+    </div>
+    <div id="traveldest" >
+
+    <div class="destination">
     <h4>Destination1</h4>
     <img src="images/resort2.jpg" alt="destination">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid obcaecati similique blanditiis, quis facere, autem dolores in dolor, culpa ipsa incidunt maiores voluptate ipsam illum itaque voluptatum eum. Atque?</p>
+    </div>
+    <div class="destination">
     <h4>Destination 2</h4>
     <img src="images/resort3.jpg" alt="destination">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur adipisci esse veritatis nihil veniam velit eum, consectetur fuga consequuntur dicta, praesentium quasi, incidunt repudiandae amet magni. Ducimus magnam consectetur, ad!</p>
-    <h4>Destination 2</h4>
+    </div>
+    <div class="destination">
+    <h4>Destination 3</h4>
     <img src="images/resort4.jpg" alt="destination">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, earum animi, molestias accusamus dignissimos debitis! Libero repellat, nesciunt modi reprehenderit ipsam earum officiis fugit aliquid consequuntur aspernatur, perferendis maxime alias.</p>
+    </div>
+    </div>
+    <div id ="contactUs">
+      <img id="footerimg" src="images/resort1.jpg" alt="">
+      <h1>Contact us</h1>
+      <p>You can contact us at:</p>
+      <ul type="square">
+          <li>Email:happy@trails.com</li>
+          <li>Phone number: +25478888888</li>
+          <li>P.O. Box 123-567, Nairobi.</li>
+      </ul>
+
+
+
+    </div>
   </body>
 </html>
